--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,10 @@ on: [push]
 jobs:
   eslint:
     name: ESLint and Test
-    runs-on: ubuntu-latest
-
+    runs-on: windows-2017
+    
     steps:
+      - run: node -v
       - name: Checkout code
         uses: actions/checkout@v2
 
