--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest --watch",
-    "ci:test":"jest --ci"
+    "ci:test": "jest --ci",
+    "develop": "webpack --mode=development",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2"
   }
 }
