add build script in ci

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,5 @@ jobs:
         run: npm run lint
       - name: Run Test
         run: npm run ci:test
+      - name: Build and Output
+        run: npm run build
