--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
