--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint ./src",
     "test": "jest --watch",
     "ci:test": "jest --ci",
     "develop": "webpack --mode=development",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "ci:lighthouse": "lhci autorun"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "@lhci/cli": "^0.8.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
